[package]
name = "lcd-2004-i2c"
version = "0.1.0"
authors = ["Alex Gavin a_gavin@icloud.com"]
edition = "2018"
description = "I2C driver for 20x4 LCD displays."
homepage = "https://github.com/a-gavin/lcd-2004-i2c"
keywords = ["lcd", "i2c", "embedded", "embedded-hal", "embedded-hal-mock"]
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/a-gavin/lcd-2004-i2c"

[dependencies]
ufmt = "0.1.0"
ufmt-write = "0.1.0"
embedded-hal = "0.2.3"

[dev-dependencies]
cortex-m = "0.7"
embedded-hal-mock = "0.8.0"